# Jenkins_Log_Intel_System

./: .env.example  .gitignore  .test_endpoints.py  COMPONENT_AUDIT.md  ERROR_CATALOG.md  Jenkinsfile  PROJECT_COMPLETION_REPORT.md  README.md  STARTUP_GUIDE.md  bootstrap.json  delete_fake_repo.py  func_test.py  func_test_full_output.txt  func_test_output.txt  func_test_results.txt  main.py  ngrok-jenkins.yml  ngrok.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  server.log.err  smoke_test.py  start-ngrok.ps1  verify_requirements.py
.claude/: settings.local.json
app/: config.py  db.py  models.py  pipeline_models.py  pipeline_tasks.py  request_log.py  scheduler.py  tasks.py  utils.py  worker_models.py
app/routers/: github_webhook.py  jobs.py  ui.py  webhook.py  workers.py
app/services/: classifier.py  jenkinsfile_parser.py  job_scheduler.py  log_fetcher.py  log_parser.py  notifier.py  pattern_store.py  priority.py  realtime_data.py  root_cause.py  worker_pool.py
app/tests/: conftest.py  test_bug_fixes.py  test_classifier.py  test_jenkinsfile_parser.py  test_job_scheduler.py  test_jobs_router.py  test_log_parser.py  test_priority_scheduling.py  test_webhook.py
design/: design.txt
design/backend_master/: code.html
design/job_queue_db/: code.html
frontend/: README.md  analytics.html  backend.html  explorer.html  index.html  queue.html  scheduler.html  settings.html  simulation.html  webhooks.html  workers.html
frontend/app/: package.json  (+2 more)
rules/: classifier_rules.yaml
scripts/: query_build_events.py  reset_db.py  test_notify.py
(+12 files in other folders)
